--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -130,8 +130,16 @@
 
         <activity android:name=".Settings$WirelessSettings"
             android:label="@string/header_category_wireless_networks">
-            <intent-filter android:priority="4">
+            <intent-filter android:priority="5">
                 <action android:name="com.android.settings.category.wireless" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".Settings$Freedom"
+            android:label="@string/header_category_freedom">
+            <intent-filter android:priority="4">
+                <action android:name="com.android.settings.category.freedom" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -142,6 +150,31 @@
                 <action android:name="com.android.settings.category.device" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+
+        <activity android:name="Settings$FreedomActivity"
+            android:label="@string/freedom_hub_title"
+            android:icon="@drawable/ic_settings_freedom"
+            android:taskAffinity="">
+            <intent-filter android:priority="1">
+                <action android:name="aimrom.freedom.Freedom" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="9">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.freedom" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.aimrom.freedom.Freedom" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
         </activity>
 
         <activity android:name=".Settings$PersonalSettings"
