--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -134,7 +134,7 @@
 
         <activity android:name=".Settings$WirelessSettings"
             android:label="@string/header_category_wireless_networks">
-            <intent-filter android:priority="5">
+            <intent-filter android:priority="6">
                 <action android:name="com.android.settings.category.wireless" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -142,12 +142,21 @@
 
         <activity android:name="Settings$CustomSettings"
             android:label="@string/header_category_custom">
-            <intent-filter android:priority="4">
+            <intent-filter android:priority="5">
                 <action android:name="com.android.settings.category.custom" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-		
+            <!--OTA CATEGORY -->		
+        <activity android:name="Settings$OtaSettings"
+            android:label="@string/header_category_ota">
+            <intent-filter android:priority="4">
+                <action android:name="com.android.settings.category.ota" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <!-- ends here -->
         <activity android:name=".Settings$DeviceSettings"
             android:label="@string/header_category_device">
             <intent-filter android:priority="3">
@@ -2959,7 +2968,31 @@
                 android:resource="@string/magisk_summary" />
         </activity>
 
-      
+      <!-- AIMOTA ACTIVITY -->
+        <activity android:name="Settings$AimotaActivity"
+            android:label="@string/ota_title"
+            android:icon="@drawable/ic_aim_ota"
+            android:taskAffinity="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="5">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ota" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.AIMOTA" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/ota_summary" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+        </activity>
+           <!-- ota activity ends here -->
+
            <activity android:name=".applications.LockPatternActivity"
                   android:label="@string/protected_apps"
                   android:excludeFromRecents="true">
